added favicon for clicker game page

--- a/checkpoint3/index.html
+++ b/checkpoint3/index.html
@@ -30,6 +30,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="../img/clicker-favicon.png">
 
 </head>
 
