Fix URL required

--- a/09week/customer-satisfaction/index.html
+++ b/09week/customer-satisfaction/index.html
@@ -14,7 +14,7 @@
   <form id="formTest" method="get" action="processData">
     <table>
     <tr>
-      <td><label for="txtUrl">URL<span class="required">*</span></label></td>
+      <td><label for="txtUrl">URL</label></td>
       <td><input type="text" id="txtUrl" name="email"></td>
       <td id="elmUrlError" class="errorMsg">&nbsp;</td></tr>
 
