--- a/03week/airplane/index.html
+++ b/03week/airplane/index.html
@@ -11,18 +11,62 @@
 <body>
     <header>
         <ul class="navbar" role="navigation">
-            <li><img src="../airplane/img/logo.png" alt=""></li>
-            <li><img src="../airplane/img/home-icon.png">Home</li>
-            <li><img src="../airplane/img/deal-icon.png">Travel Deals</li>
-            <li><img src="../airplane/img/schedule-icon.png">Flight Schedule</li>
-            <li><img src="../airplane/img/login-icon.png">Register/Login</li>
-
+            <li><a href="#"><img src="../airplane/img/logo.png" alt=""></a></li>
+            <li><a href="#"><img src="../airplane/img/home-icon.png">Home</a></li>
+            <li><a href="#"><img src="../airplane/img/deal-icon.png">Travel Deals</a></li>
+            <li><a href="#"><img src="../airplane/img/schedule-icon.png">Flight Schedule</a></li>
+            <li><a href="#"><img src="../airplane/img/login-icon.png">Register/Login</a></li>
         </ul>
 
     </header>
-    <div class="bg-img">
-        <img src="../airplane/img/airline.jpg" alt="">
-    </div>
+
+    <form>
+        <ul class="flex-outer">
+            <li class="plane">
+                <button>
+                    <img src="../airplane/img/plane-icon.png" alt="">
+                </button>
+            </li>
+            <li class="hotel">
+                <button>
+                    <img src="../airplane/img/hotel-icon.png" alt="">
+                </button>
+            </li>
+            <li class="car"><button>
+                    <img src="../airplane/img/car-icon.png" alt="">
+                </button>
+            </li>
+            <li class="depart">
+                <input type="text" id="first-name" placeholder="Depart">
+            </li>
+            <li class="arrive">
+                <input type="text" id="last-name" placeholder="Arrive">
+            </li>
+            <li class="depart-date">
+                <input type="date" name="depart-date" id="">
+            </li>
+            <li class="arrive-date">
+                <input type="date" name="arrive-date" id="">
+            </li>
+            <li class="passengers-num">
+                <label for="message">Passengers</label>
+                <input type="number" name="passengers-num" id="" placeholder="1">
+            </li>
+            <li class="return-check">
+                <input type="radio" name="" id="">
+                <label for="">Return</label>
+            </li>
+            <li class="oneway-check">
+                <input type="radio" name="" id="">
+                <label for="">One Way</label>
+            </li>
+            <li class="search-flights">
+                <button>Search Flights
+                </button>
+            </li>
+
+        </ul>
+    </form>
 </body>
 
 </html>
