added files to main index.html file on workbook

--- a/Checkpoint-3/index.html
+++ b/Checkpoint-3/index.html
@@ -5,10 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Page Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="./style.css" />
 </head>
 <body>
   <h1>Clicker Game</h1>
+  <div class="box" id="counter-1">1</div>
+    <div class="box" id="counter-10">10</div>
+    <div class="box" id="counter-100">100</div>
+    <div class="box" id="click-all">Click All</div>  
+    
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="./script.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
