--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
     <li><a href="./05week/travel-gram/index.html"></a></li>
     
     <li><a href="./06week/Checkpoint2/index.html">Checkpoint2</a></li>
+
+    <li><a href="./08week/dom-events/index.html">Dom Events</a></li>
+
+    <li><a href="./08week/tic-tac-toe/index.html">TicTacToe</a></li>
+
+    <li><a href="./09week/towers-of-hanoi/index.html">Towers of Hanoi</a></li>
+
+    <li><a href="./09week/customer-satisfaction/index.html">Customer Satisfaction</a></li>
     
   </ul>
 
