--- a/checkpoint3/index.html
+++ b/checkpoint3/index.html
@@ -43,45 +43,46 @@
     <div class="container-main">
       <div class="container-inner">
         <div id="counter" class="unselectable">0</div>
+        <div class="" id="current-upgrades" class="unselectable"></div>
         <p id="next-weapon-level"></p>
         <div id="weapon" class="unselectable">
           <img id="weapon-img" src="img/sword_01.png">
-          <p id="weapon-name">sword_01</p>
+          <p class="title" id="weapon-name">sword_01</p>
           <p class="announce" id="max-level">MAX LEVEL</p>
         </div>
         <div id="hammer" class="unselectable swing"><img draggable="false" src="img/hammer.png" alt="a hammer"></div>
         <div id="anvil" class="unselectable">
           <img draggable="false" src="img/anvil.png" alt="an anvil">
         </div>
-        <p>Upgrades</p>
-        <div id="upgrades">
-          <div class="upgrade one" id="upgrade-apprentice">
-            <p class="upgrade-number">1</p>
-            <p class="upgrade-name">Apprentice</p>
-            <p class="upgrade-cost"></p>
+        <p class="title">Shop</p>
+        <div id="shop" class="unselectable">
+          <div class="shop one" id="upgrade-apprentice">
+            <p class="shop-number">1</p>
+            <p class="shop-name">Apprentice</p>
+            <p class="shop-cost"></p>
           </div>
-          <div class="upgrade two" id="upgrade-hammer">
-            <p class="upgrade-number">2</p>
-            <p class="upgrade-name">Hammer Efficiency</p>
-            <p class="upgrade-cost"></p>
+          <div class="shop two" id="upgrade-player-hammer">
+            <p class="shop-number">2</p>
+            <p class="shop-name">Hammer Efficiency</p>
+            <p class="shop-cost"></p>
           </div>
-          <div class="upgrade three">
-            <p class="upgrade-number">3</p>
+          <div class="shop three">
+            <p class="shop-number">3</p>
           </div>
-          <div class="upgrade four">
-            <p class="upgrade-number">4</p>
+          <div class="shop four">
+            <p class="shop-number">4</p>
           </div>
-          <div class="upgrade five">
-            <p class="upgrade-number">5</p>
+          <div class="shop five">
+            <p class="shop-number">5</p>
           </div>
-          <div class="upgrade six">
-            <p class="upgrade-number">6</p>
+          <div class="shop six">
+            <p class="shop-number">6</p>
           </div>
-          <div class="upgrade seven">
-            <p class="upgrade-number">7</p>
+          <div class="shop seven">
+            <p class="shop-number">7</p>
           </div>
-          <div class="upgrade eight">
-            <p class="upgrade-number">8</p>
+          <div class="shop eight">
+            <p class="shop-number">8</p>
           </div>
         </div>
       </div>
