--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -131,7 +131,14 @@
           <div id = "inGamePier" class="pier"></div>
         </div>
       </div>
-      <div class="rawMaterialContainer"></div>
+      <div class="rawMaterialContainer">
+        <div class="resourceMiner">
+          <div id= "minerBamboo" class="bambooMiner miner"></div>
+          <div id= "minerWood" class="woodMiner miner"></div>
+          <div id= "minerStone" class="stoneMiner miner"></div>
+          <div id= "minerIron" class="ironMiner miner"></div>
+        </div>
+      </div>
     </div>
 
 
