--- a/checkpoint3/index.html
+++ b/checkpoint3/index.html
@@ -43,7 +43,7 @@
     <div class="container-main">
       <div class="container-inner">
         <div id="counter" class="unselectable">0</div>
-        <div class="" id="current-upgrades" class="unselectable"></div>
+        <div id="current-upgrades" class="unselectable"></div>
         <p id="next-weapon-level"></p>
         <div id="weapon" class="unselectable">
           <img id="weapon-img" src="img/sword_01.png">
