finished mining shell

--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -70,12 +70,6 @@
         </div>
       </div>
     </div>
-    
-    
-     <!-- under condtruction -->
-     <!-- under condtruction -->
-     <!-- under condtruction -->
-     <!-- under condtruction -->
     <div class="mainGameContainer">
       <div class="buildingsContainer">
         <div class="buildingOuterContainer">
@@ -132,6 +126,7 @@
         </div>
       </div>
       <div class="rawMaterialContainer">
+        <div class="minertitle">Mine For Resorces</div>
         <div class="resourceMiner">
           <div id= "minerBamboo" class="bambooMiner miner"></div>
           <div id= "minerWood" class="woodMiner miner"></div>
