added comtact page to portfolio changed styling on bio added text to checkpoint 3

--- a/06week/portfolio/index.html
+++ b/06week/portfolio/index.html
@@ -21,7 +21,7 @@
             <a href="/02week/bio/index.html" class="navlink">about</a>
             </div>
             <div class="four">
-            <a href="/02week/blog/index.html" class="navlink">blog</a>
+            <a href="/09week/customer-satisfaction/index.html" class="navlink">contact</a>
             </div>    
     </nav>
     <div class="container">
