--- a/checkpoint-3/index.html
+++ b/checkpoint-3/index.html
@@ -11,10 +11,17 @@
     <script src="http://code.jquery.com/jquery-3.2.1.js" ></script>
 </head>
 <body>
+    
     <div class=container>
+            <nav>
+                    <p class="nav">how many clicks can you get in 30 sec!</p>
+                </nav>
     <div class="button-div">
-            <button type="button" onClick="countClicks()"></button>
+        <!--clicker button-->
+            <button id="hero" type="button" onClick="countClicks()"></button>
+            <!--click counter-->
             <p>Clicks: <a id="clicks">0</a></p>
+            <!--timer-->
             <span id="timer"></span>
             </div>
             </div>
