fixed spelling error

--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -126,7 +126,7 @@
         </div>
       </div>
       <div class="rawMaterialContainer">
-        <div class="minertitle">Mine For Resorces</div>
+        <div class="minertitle">Mine For Resources</div>
         <div class="resourceMiner">
           <div id= "minerBamboo" class="bambooMiner miner"></div>
           <div id= "minerWood" class="woodMiner miner"></div>
