Refactored js code for matching game

--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -29,6 +29,7 @@
     <nav id="projectsnav">
       <strong class="white32">Project Links</strong>
       <ul>
+        <li><a href="../02week/bio/index.html" target="_blank">Bio</a></li>
         <li><a href="../02week/blog/index.html" target="_blank">Blog</a></li>
         <li><a href="../03week/airplane/index.html" target="_blank">Airplane</a></li>
         <li><a href="../04week/nasa/index.html" target="_blank">Nasa</a></li>
