--- a/checkpoint-3/index.html
+++ b/checkpoint-3/index.html
@@ -40,7 +40,7 @@
       </div>
       <div class="box-5">
         <div class="minesweeper">
-          <div class="title">Bonus Game: Mine Sweeper</div>
+          <div class="title">Bonus Game: Minesweeper</div>
           <p>This is a small Minesweeper-esque game I made. The object of this game is to get as high of a score as you
             can without hitting a bomb.</p>
           <p>Click the squares to reveal a number between 1 and 3, and add it to your score. </p>
@@ -65,7 +65,7 @@
         <div class="matchinggame">
           <div class="title">Bonus Game #2: Memory Game</div>
           <p>Here's another bonus game to try! This one is a Memory Matching game.</p>
-          <p>Click a squares to reveal it's number and try to find it's matching number in the grid.</p>
+          <p>Click a square to reveal it's number and try to find it's matching number in the grid.</p>
           <p>If you find all of the pairs, you win!</p>
           &nbsp;
           <div id="winmessage">You found all the pairs! You Win!</div>
