Hopefully fixed cookie counter

--- a/checkpoint3/index.html
+++ b/checkpoint3/index.html
@@ -37,7 +37,7 @@
     <button onclick="upgrade()">Upgrade<br>(25)</button>
    </div>
 
-<script type="text/javascript" src="/js/jquery.slidePanel.min.js"></script>  
-<script src="/js/script.js"></script>
+<script type="text/javascript" src="./js/jquery.slidePanel.min.js"></script>  
+<script src="./js/script.js"></script>
 </body>
 </html>
