--- a/checkpoint3/index.html
+++ b/checkpoint3/index.html
@@ -56,33 +56,45 @@
         </div>
         <p class="title">Shop</p>
         <div id="shop" class="unselectable">
-          <div class="shop one" id="upgrade-apprentice">
+          <div class="shop one" id="hire-apprentice">
             <p class="shop-number">1</p>
-            <p class="shop-name">Apprentice</p>
+            <p class="shop-name">Hire Apprentice</p>
             <p class="shop-cost"></p>
           </div>
-          <div class="shop two" id="upgrade-player-hammer">
+          <div class="shop two" id="apprentice-upgrade-1">
             <p class="shop-number">2</p>
-            <p class="shop-name">Hammer Efficiency</p>
+            <p class="shop-name">Apprentice Upgrade 1</p>
             <p class="shop-cost"></p>
           </div>
-          <div class="shop three">
+          <div class="shop three" id="apprentice-upgrade-2">
             <p class="shop-number">3</p>
+            <p class="shop-name">Apprentice Upgrade 2</p>
+            <p class="shop-cost"></p>
           </div>
-          <div class="shop four">
+          <div class="shop four" id="apprentice-upgrade-3">
             <p class="shop-number">4</p>
+            <p class="shop-name">Apprentice Upgrade 3</p>
+            <p class="shop-cost"></p>
           </div>
-          <div class="shop five">
+          <div class="shop five" id="hammer-upgrade-1">
             <p class="shop-number">5</p>
+            <p class="shop-name">Hammer Upgrade 1</p>
+            <p class="shop-cost"></p>
           </div>
-          <div class="shop six">
+          <div class="shop six" id="hammer-upgrade-2">
             <p class="shop-number">6</p>
+            <p class="shop-name">Hammer Upgrade 2</p>
+            <p class="shop-cost"></p>
           </div>
-          <div class="shop seven">
+          <div class="shop seven" id="hammer-upgrade-3">
             <p class="shop-number">7</p>
+            <p class="shop-name">Hammer Upgrade 3</p>
+            <p class="shop-cost"></p>
           </div>
-          <div class="shop eight">
+          <div class="shop eight" id="hammer-upgrade-4">
             <p class="shop-number">8</p>
+            <p class="shop-name">Dual Wield Hammers</p>
+            <p class="shop-cost"></p>
           </div>
         </div>
       </div>
