fixed display of shop container

--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -348,6 +348,198 @@
         </div>
       </div>
     </div>
+    <div class="outpostItems itemConstructBuilding" data-origin = "outpost">
+      <div class="closeItemConstructBuilding"></div>
+      <div class="creatableItemsContainer">
+          <div class="fireWoodCreate outterItemCreate">
+            <div id = "fireWoodRequiredMaterials"class="requiredMaterials"></div>
+            <div id = "fireWoodMiner" class="itemMiner fireWood"></div>
+            <div id="fireWoodMakeAmmount"></div>
+          </div>
+      </div>
+    </div>
+    <div class="quarryItems itemConstructBuilding" data-origin = "quarry">
+      <div class="closeItemConstructBuilding"></div>
+      <div class="creatableItemscontainer">
+        <div class="minerContainer">
+          <div class="stoneBlockCreate outterItemCreate">
+            <div id = "stoneBlockRequiredMaterials"class="requiredMaterials"></div>
+            <div id = "stoneBlockMiner" class="itemMiner stoneBlock"></div>
+            <div id="stoneBlockMakeAmmount"></div>
+          </div>        
+        </div>
+      </div>
+    </div>
+    <div class="hunterItems itemConstructBuilding" data-origin = "hunter">
+      <div class="closeItemConstructBuilding"></div>
+      <div class="creatableItems">
+          <div class="dryedJuteCreate outterItemCreate">
+            <div id = "dryedJuteRequiredMaterials"class="requiredMaterials"></div>
+            <div id = "dryedJuteMiner" class="itemMiner driedJute"></div>
+            <div id="dryedJuteMakeAmmount"></div>
+          </div>
+      </div>
+    </div>
+    <div class="woodWorkshopItems itemConstructBuilding" data-origin = "woodWorkshop">
+      <div class="closeItemConstructBuilding"></div>
+      <div class="creatableItems">
+          <div class="ropeCreate outterItemCreate">
+            <div id = "ropeRequiredMaterials"class="requiredMaterials"></div>
+            <div id = "ropeMiner" class="itemMiner rope"></div>
+            <div id="ropeMakeAmmount"></div>
+          </div>
+		      <div class="plankCreate outterItemCreate">
+            <div id = "plankRequiredMaterials"class="requiredMaterials"></div>
+            <div id = "plankMiner" class="itemMiner plank"></div>
+            <div id="plankMakeAmmount"></div>
+          </div>
+		      <div class="ropeLadderCreate outterItemCreate">
+            <div id = "ropeLadderRequiredMaterials"class="requiredMaterials"></div>
+            <div id = "ropeLadderMiner" class="itemMiner ropeLadder"></div>
+            <div id="ropeLadderMakeAmmount"></div>
+          </div>
+		      <div class="BucketCreate outterItemCreate">
+            <div id = "BucketRequiredMaterials"class="requiredMaterials"></div>
+            <div id = "BucketMiner" class="itemMiner bucket"></div>
+            <div id="BucketMakeAmmount"></div>
+          </div>
+		      <div class="jackPlaneCreate outterItemCreate">
+            <div id = "jackPlaneRequiredMaterials"class="requiredMaterials"></div>
+            <div id = "jackPlaneMiner" class="itemMiner jackPlane"></div>
+            <div id="jackPlaneMakeAmmount"></div>
+          </div>
+      </div>
+    </div>
+    <div class="wellItems itemConstructBuilding" data-origin = "well">
+      <div class="closeItemConstructBuilding"></div>
+      <div class="creatableItems">
+          <div class="waterCreate outterItemCreate">
+            <div id = "waterRequiredMaterials"class="requiredMaterials"></div>
+            <div id = "waterMiner" class="itemMiner water"></div>
+            <div id="waterMakeAmmount"></div>
+          </div>
+      </div>
+    </div>
+    <div class="weaverItems itemConstructBuilding" data-origin = "weaver">
+      <div class="closeItemConstructBuilding"></div>
+      <div class="creatableItems">
+          <div class="matCreate outterItemCreate">
+            <div id = "matRequiredMaterials"class="requiredMaterials"></div>
+            <div id = "matMiner" class="itemMiner mat"></div>
+            <div id="matMakeAmmount"></div>
+          </div>
+          <div class="wickerBasketCreate outterItemCreate">
+            <div id = "wickerBasketRequiredMaterials"class="requiredMaterials"></div>
+            <div id = "wickerBasketMiner" class="itemMiner wickerBasket"></div>
+            <div id="wickerBasketMakeAmmount"></div>
+          </div>
+          <div class="woodenLatticeCreate outterItemCreate">
+            <div id = "woodenLatticeRequiredMaterials"class="requiredMaterials"></div>
+            <div id = "woodenLatticeMiner" class="itemMiner woodenLattice"></div>
+            <div id="woodenLatticeMakeAmmount"></div>
+          </div>
+      </div>
+    </div>
+    <div class="foodDryerItems itemConstructBuilding" data-origin = "foodDryer">
+      <div class="closeItemConstructBuilding"></div>
+      <div class="creatableItems outterItemCreate">
+          <div class="foodCreate">
+            <div id = "foodRequiredMaterials"class="requiredMaterials"></div>
+            <div id = "foodMiner" class="itemMiner food"></div>
+            <div id="foodMakeAmmount"></div>
+          </div>        
+      </div>
+    </div>
+    <div class="potteryItems itemConstructBuilding" data-origin = "pottery">
+      <div class="closeItemConstructBuilding"></div>
+      <div class="creatableItems">
+          <div class="ceramicPotCreate outterItemCreate">
+            <div id = "ceramicPotRequiredMaterials"class="requiredMaterials"></div>
+            <div id = "ceramicPotMiner" class="itemMiner ceramicPot"></div>
+            <div id="ceramicPotMakeAmmount"></div>
+          </div>
+          <div class="ceramicLanternCreate outterItemCreate">
+            <div id = "ceramicLanternRequiredmaterials"class="requiredMaterials"></div>
+            <div id = "ceramicLanternMiner" class="itemMiner ceramicLantern"></div>
+            <div id="ceramicLanternMakeAmmount"></div>
+          </div>
+
+      </div>
+    </div>
+    <div class="smithyItems itemConstructBuilding" data-origin = "smithy">
+      <div class="closeItemConstructBuilding"></div>
+      <div class="creatableItems">
+          <div class="cutlassCreate outterItemCreate">
+            <div id = "cutlassRequiredMaterials"class="requiredMaterials"></div>
+            <div id = "cutlassMiner" class="itemMiner cutlass"></div>
+            <div id="cutlassMakeAmmount"></div>
+          </div>
+          <div class="axeCreate outterItemCreate">
+            <div id = "axeRequiredMaterialserials"class="requiredMaterials"></div>
+            <div id = "axeMiner" class="itemMiner axe"></div>
+            <div id="axeMakeAmmount"></div>
+          </div>
+          <div class="pickAxeCreate outterItemCreate">
+            <div id = "pickAxeRequiredMaterials"class="requiredMaterials"></div>
+            <div id = "pickAxeMiner" class="itemMiner pickAxe"></div>
+            <div id="pickAxeMakeAmmount"></div>
+          </div>
+          <div class="lampOilCreate">
+            <div id = "lampOilRequiredMaterials"class="requiredMaterials"></div>
+            <div id = "lampOilMiner" class="itemMiner lampOil"></div>
+            <div id="lampOilMakeAmmount"></div>
+          </div>
+		      <div class="gearCreate outterItemCreate">
+            <div id = "gearRequiredMaterials"class="requiredMaterials"></div>
+            <div id = "gearMiner" class="itemMiner cog"></div>
+            <div id="gearMakeAmmount"></div>
+          </div>
+      </div>
+    </div>
+    <div class="glassItems itemConstructBuilding" data-origin = "glass">
+      <div class="closeItemConstructBuilding"></div>
+      <div class="creatableItems">
+          <div class="bottleCreate outterItemCreate">
+            <div id = "bottleRequiredMaterials"class="requiredMaterials"></div>
+            <div id = "bottleMiner" class="itemMiner glassBottle"></div>
+            <div id="bottleMakeAmmount"></div>
+          </div>
+          <div class="lenseCreate outterItemCreate">
+            <div id = "lenseRequiredMaterials"class="requiredMaterials"></div>
+            <div id = "lenseMiner" class="itemMiner Lense"></div>
+            <div id="lenseMakeAmmount"></div>
+          </div>
+      </div>
+    </div>
+    <div class="loomItems itemConstructBuilding" data-origin = "loom">
+      <div class="closeItemConstructBuilding"></div>
+      <div class="creatableItems">
+          <div class="stringCreate outterItemCreate">
+            <div id = "stringRequiredMaterials" class="requiredMaterials"></div>
+            <div id = "stringMiner" class="itemMiner string"></div>
+            <div id="stringMakeAmmount"></div>
+          </div>
+          <div class="fabricCreate outterItemCreate">
+            <div id = "fabricRequiredMaterials" class="requiredMaterials"></div>
+            <div id = "fabricMiner" class="itemMiner cloth"></div>
+            <div id="fabricMakeAmmount"></div>
+          </div>
+      </div>
+    </div>
+    <div class="lureItems itemConstructBuilding" data-origin = "lure">
+      <div class="closeItemConstructBuilding"></div>
+      <div class="creatableItems">
+          <div class="fishHookCreate outterItemCreate">
+            <div id = "fishHookRequiredMaterials" class="requiredMaterials"></div>
+            <div id = "fishHookMiner" class="itemMiner fishHook"></div>
+            <div id="fishHookMakeAmmount"></div>
+          </div>
+      </div>
+    </div>
+    <div class="pierItems itemConstructBuilding" data-origin = "pier">
+      <div class="closeItemConstructBuilding"></div>
+      <div class="creatableItems"></div>
+    </div>
     <script src="./javascript/main.js"></script>
   </body>
 
