added unlocked class for shop items

--- a/checkpoint3/index.html
+++ b/checkpoint3/index.html
@@ -76,7 +76,7 @@
             <p class="shop-name">Apprentice Upgrade 3</p>
             <p class="shop-cost"></p>
           </div>
-          <div class="shop five" id="hammer-upgrade-1">
+          <div class="shop five unlocked" id="hammer-upgrade-1">
             <p class="shop-number">5</p>
             <p class="shop-name">Hammer Upgrade 1</p>
             <p class="shop-cost"></p>
