removed shop numbers, added current upgrade section

--- a/checkpoint3/index.html
+++ b/checkpoint3/index.html
@@ -43,7 +43,11 @@
     <div class="container-main">
       <div class="container-inner">
         <div id="counter" class="unselectable">0</div>
-        <div id="current-upgrades" class="unselectable"></div>
+        <div id="current-upgrades" class="unselectable">
+          <ul>Current Upgrades:<br>
+            -----------------
+          </ul>
+        </div>
         <p id="next-weapon-level"></p>
         <div id="weapon" class="unselectable">
           <img id="weapon-img" src="img/sword_01.png">
@@ -57,42 +61,34 @@
         <p class="title">Shop</p>
         <div id="shop" class="unselectable">
           <div class="shop one" id="hire-apprentice">
-            <p class="shop-number">1</p>
             <p class="shop-name">Hire Apprentice</p>
             <p class="shop-cost"></p>
           </div>
           <div class="shop two" id="apprentice-upgrade-1">
-            <p class="shop-number">2</p>
             <p class="shop-name">Apprentice Upgrade 1</p>
             <p class="shop-cost"></p>
           </div>
           <div class="shop three" id="apprentice-upgrade-2">
-            <p class="shop-number">3</p>
             <p class="shop-name">Apprentice Upgrade 2</p>
             <p class="shop-cost"></p>
           </div>
           <div class="shop four" id="apprentice-upgrade-3">
-            <p class="shop-number">4</p>
             <p class="shop-name">Apprentice Upgrade 3</p>
             <p class="shop-cost"></p>
           </div>
           <div class="shop five unlocked" id="hammer-upgrade-1">
-            <p class="shop-number">5</p>
             <p class="shop-name">Hammer Upgrade 1</p>
             <p class="shop-cost"></p>
           </div>
           <div class="shop six" id="hammer-upgrade-2">
-            <p class="shop-number">6</p>
             <p class="shop-name">Hammer Upgrade 2</p>
             <p class="shop-cost"></p>
           </div>
           <div class="shop seven" id="hammer-upgrade-3">
-            <p class="shop-number">7</p>
             <p class="shop-name">Hammer Upgrade 3</p>
             <p class="shop-cost"></p>
           </div>
           <div class="shop eight" id="hammer-upgrade-4">
-            <p class="shop-number">8</p>
             <p class="shop-name">Dual Wield Hammers</p>
             <p class="shop-cost"></p>
           </div>
