--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -1,1 +1,102 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Msystems</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Podkova:600|Teko:400,600" rel="stylesheet">
+</head>
+
+<body>
+
+    <!-- Navigation -->
+    <nav class="navBar">
+        <div class="navContent">
+            <img class="logo" src="img/msystems-logo.jpg">
+            <div>
+                <a class="navLink" href="index.html">Services</a>
+                <a class="navLink" href="https://www.instagram.com/awesome_earthmovers/?hl=en">Gallery</a>
+                <a class="navLink" href="https://goo.gl/forms/RA9VDvTGVuDypsAh2">Contact Us</a>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Hero image section -->
+    <section class="hero">
+        <div class="motto">We are responsive, reliable, and honest.</div>
+    </section>
+
+    <!-- Services section -->
+    <section class="servicesSection">
+        <h1>Our Services</h1>
+        <p class="serviceDescription">At Msystems, we offer a wide range of services to assist you in your home or
+            commercial development. We can even bundle multiple aspects of you project to help simplify the process and
+            save you money.</p>
+        <div class="services">
+            <div class="serviceCard">
+                <img class="serviceImage" src="img/msystems-land-clearing.jpg">
+                <h2>Land Clearing</h2>
+                <p class="description">Whether you are looking for a simple neighborhood lot clear, or you want to wipe
+                    out all of the cedar on your ranch, we have what it takes to get it done.</p>
+            </div>
+            <div class="serviceCard">
+                <img class="serviceImage" src="img/msystems-concrete.jpg">
+                <h2>Concrete</h2>
+                <p class="description">From custom homes to pool patio’s, new construction or driveway addition, we can
+                    get it done. We can tear out your old asphalt or concrete driveway and give it a fresh start too.</p>
+            </div>
+            <div class="serviceCard">
+                <img class="serviceImage" src="img/msystems-excavation.jpg">
+                <h2>Excavation</h2>
+                <p class="description">Whether you are looking for a simple neighborhood lot clear, or you want to wipe
+                    out all of the cedar on your ranch, we have what it takes to get it done.</p>
+            </div>
+            <div class="serviceCard">
+                <img class="serviceImage" src="img/msystems-grading.jpg">
+                <h2>Site Work and Grading</h2>
+                <p class="description">From a simple bonus parking pad at your house to parking lot grading we have you
+                    covered. On jobs that call for strict tolerances, we use the aid of GPS integrated controls to
+                    ensure that we are right on target.</p>
+            </div>
+            <div class="serviceCard">
+                <img class="serviceImage" src="img/msystems-demolition.jpg">
+                <h2>Demolition</h2>
+                <p class="description">From the old shop at your house to the commercial warehouse, we are here to help
+                    you get rid of the old and make room for the new. Multi floor custom homes and concrete foundations
+                    are no problem. We will get them knocked down and disposed of in an environmentally responsible
+                    manor.</p>
+            </div>
+            <div class="serviceCard">
+                <img class="serviceImage" src="img/msystems-trucking.jpg">
+                <h2>Trucking</h2>
+                <p class="description">If you need material hauled in or out of your location, we can take care of it.
+                    Top soil, crushed aggregates, sand, decorative stone, or mulch are just some of the things we can
+                    deliver.</p>
+            </div>
+        </div>
+        <p class="serviceDescription">We're proud to showcase samples of our work. To see what we do best <a href="https://www.instagram.com/awesome_earthmovers/?hl=en"
+                class="galleryLink">take a look at our gallery</a></p>
+        <a href="https://goo.gl/forms/RA9VDvTGVuDypsAh2" class="estimate">Request An Estimate</a>
+    </section>
+
+    <!-- About section -->
+    <section class="about">
+        <h1>About Us</h1>
+        <img class="aboutUs" src="img/msystems-about-us.jpg">
+        <div class="aboutUs">
+            <p>Locally owned and operated, Msystems has never been shy about meeting the needs of a rapidly developing
+                Central Texas area.</p>
+            <p>Although our business began in residential site-work, we've continued expanding our offerings to give
+                our customers a versatile service that matches the demands of our region. Now accommodating, but not
+                limited to, commercial applications, demolition, and concrete work.</p>
+            <p>Do you have a project in need responsive, reliable, and honest service? We can help. <a class="whiteLink"
+                    href="https://goo.gl/forms/RA9VDvTGVuDypsAh2">Request an estimate today.</a></p>
+        </div>
+    </section>
+</body>
+
+</html>
