not quite finished

--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -4,13 +4,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Checkpoint One</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 </head>
 
-
+<!--logo-->
     <img src="https://i.imgur.com/HLcxpNP.png" class="img">
  <nav>
-    <div>
+    <div class="navbar">
         <!--buttons for nav menu-->
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Delius+Swash+Caps"/>
         <button class="home">Home</button>
@@ -49,10 +49,12 @@
         <h3>
             Testimonials
         </h3>
-        "I love that Sky is super accomodating! I had a last minute cake order and not only was the cake delicious and looked better than I imagined, she was super nice about welcoming my bad planning. Reccommending Brown Sugar Bakery to all of my friends!" </br>
-        "Super friendly staff. Attentive and always smiling."</br>
-        "Not only super tasty, but pretty! Thanks Brown Sugar Bakery!"</br>
-        "Best sourdough in town."
+        <ul>
+            <li>"I love that Sky is super accomodating! I had a last minute cake order and not only was the cake delicious and looked better than I imagined, she was super nice about welcoming my bad planning. Reccommending Brown Sugar Bakery to all of my friends!" </li>
+            <li>"Super friendly staff. Attentive and always smiling."</li>
+            <li>"Not only super tasty, but pretty! Thanks Brown Sugar Bakery!"</li>
+            <li> "Best sourdough in town."</li>
+        </ul>
     </p>
 </div>
 <div id="hour">
@@ -68,8 +70,14 @@
 </div>
 </body>
 <footer>
-    <b>Address:</b> 540 Sugar Creek Dr. Austin, TX, 78746
-        <b>512.983.5436</b>
-        <b>Email Address</b> info@brownsugarbakery.com
-
+    <ul>
+        <li><b>Address:</b> 540 Sugar Creek Dr. Austin, TX, 78746</li>
+        <li><b>Phone:</b>512.983.5436</li>
+        <li class="email"><b>Email Address:</b> info@brownsugarbakery.com</li>
+    </ul>
+<div class="button">
+    <button><i class="fab fa-facebook-f"></i></button>
+    <button></button>
+    <button></button>
+</div>
 </footer>
