added stat tracking sections

--- a/checkpoint3/index.html
+++ b/checkpoint3/index.html
@@ -44,10 +44,21 @@
       <div class="container-inner">
         <div id="counter" class="unselectable">0</div>
         <div id="current-upgrades" class="unselectable">
-          <ul>Current Upgrades:<br>
-            -----------------
+          <ul>
+            <p>Current Upgrades:</p>
+            <p>-----------------</p>
           </ul>
         </div>
+        <div id="player-stats" class="unselectable stats">
+          <p>Player Stats:</p>
+          <p>-------------</p>
+          <p id="dynamic-player-stats">Pts/Click: </p>
+        </div>
+        <div id="apprentice-stats" class="unselectable stats hidden">
+            <p>Apprentice Stats:</p>
+            <p>----------------</p>
+            <p id="dynamic-apprentice-stats">Pts/Sec: </p>
+          </div>
         <p id="next-weapon-level"></p>
         <div id="weapon" class="unselectable">
           <img id="weapon-img" src="img/sword_01.png">
