added currency section

--- a/checkpoint3/index.html
+++ b/checkpoint3/index.html
@@ -42,7 +42,7 @@
   <main>
     <div class="container-main">
       <div class="container-inner">
-        <div id="counter" class="unselectable">0</div>
+        <div id="counter" class="unselectable">0xp</div>
         <div id="current-upgrades" class="unselectable">
           <ul>
             <p>Current Upgrades:</p>
@@ -52,12 +52,17 @@
         <div id="player-stats" class="unselectable stats">
           <p>Player Stats:</p>
           <p>-------------</p>
-          <p id="dynamic-player-stats">Pts/Click: </p>
+          <p id="dynamic-player-stats">xp/click: </p>
         </div>
         <div id="apprentice-stats" class="unselectable stats hidden">
             <p>Apprentice Stats:</p>
             <p>----------------</p>
-            <p id="dynamic-apprentice-stats">Pts/Sec: </p>
+            <p id="dynamic-apprentice-stats">xp/sec: </p>
+        </div>
+        <div id="currency">
+            <p>Gold:</p>
+            <p>-------------</p>
+            <p id="currency-text" class="unselectable"><img id="currency-img" draggable="false" src="img/gold.png" alt="a pile of gold"></p>
           </div>
         <p id="next-weapon-level"></p>
         <div id="weapon" class="unselectable">
