more currency section changes

--- a/checkpoint3/index.html
+++ b/checkpoint3/index.html
@@ -44,7 +44,7 @@
       <div class="container-inner">
         <div id="counter" class="unselectable">0xp</div>
         <div id="currency">
-            <p id="currency-text" class="unselectable"><img id="currency-img" draggable="false" src="img/gold.png" alt="a pile of gold"></p>
+            <p id="currency-text" class="unselectable"><img id="currency-img" draggable="false" src="img/gold.png" alt="a pile of gold"> 0</p>
         </div>
         <div id="current-upgrades" class="unselectable">
           <ul>
