added log section

--- a/checkpoint3/index.html
+++ b/checkpoint3/index.html
@@ -44,7 +44,8 @@
       <div class="container-inner">
         <div id="counter" class="unselectable">0xp</div>
         <div id="currency">
-            <p id="currency-text" class="unselectable"><img id="currency-img" draggable="false" src="img/gold.png" alt="a pile of gold"> 0</p>
+          <p id="currency-text" class="unselectable"><img id="currency-img" draggable="false" src="img/gold.png" alt="a pile of gold">
+            0</p>
         </div>
         <div id="current-upgrades" class="unselectable">
           <ul>
@@ -58,9 +59,9 @@
           <p id="dynamic-player-stats">xp/click: </p>
         </div>
         <div id="apprentice-stats" class="unselectable stats hidden">
-            <p>Apprentice Stats:</p>
-            <p>----------------</p>
-            <p id="dynamic-apprentice-stats">xp/sec: </p>
+          <p>Apprentice Stats:</p>
+          <p>----------------</p>
+          <p id="dynamic-apprentice-stats">xp/sec: </p>
         </div>
         <p id="next-weapon-level"></p>
         <div id="weapon" class="unselectable">
@@ -106,6 +107,9 @@
             <p class="shop-name">Dual Wield Hammers</p>
             <p class="shop-cost"></p>
           </div>
+        </div>
+        <div>
+          <p id="log"></p>
         </div>
       </div>
     </div>
