made starting point no weapon instead of weapon_01

--- a/checkpoint3/index.html
+++ b/checkpoint3/index.html
@@ -65,8 +65,7 @@
         </div>
         <p id="next-weapon-level"></p>
         <div id="weapon" class="unselectable">
-          <img id="weapon-img" src="img/sword_01.png">
-          <p class="title" id="weapon-name">sword_01</p>
+          <img id="weapon-img">
           <p class="announce" id="max-level">MAX LEVEL</p>
         </div>
         <div id="hammer" class="unselectable swing"><img draggable="false" src="img/hammer.png" alt="a hammer"></div>
@@ -109,8 +108,8 @@
           </div>
         </div>
         <div>
-          <p id="log"></p>
         </div>
+        <p id="log"></p>
       </div>
     </div>
   </main>
