made lint happy with minor changes

--- a/checkpoint3/index.html
+++ b/checkpoint3/index.html
@@ -65,7 +65,7 @@
         </div>
         <p id="next-weapon-level"></p>
         <div id="weapon" class="unselectable">
-          <img id="weapon-img">
+          <img class="hidden" id="weapon-img" src="/">
           <p class="announce" id="max-level">MAX LEVEL</p>
         </div>
         <div id="hammer" class="unselectable swing"><img draggable="false" src="img/hammer.png" alt="a hammer"></div>
