--- a/challenges/Checkpoint-3/index.html
+++ b/challenges/Checkpoint-3/index.html
@@ -2,43 +2,72 @@
 <html>
 
 <head>
+
     <meta charset="Cookie Clicker">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/style.css">
     <title>Cookie Clicker</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <script src="code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"></script>
+    <link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+<!--adding jquery to the haad. Did not work at the end of the body-->
 </head>
 
 <body>
-    <h1>Cookie Clicker</h1>
-
-    <img src="http://3.bp.blogspot.com/-P87VGfPnOFo/Tsf86vgg4jI/AAAAAAAAAfM/1qy0e395Rww/s1600/Who+Took+the+Cookie+-+cookie.png"
-        id="cookie">
-
-    <br> Speed
-    <br>
-    <small>MPH:
-        <span id="rps"></span>
-    </small>
-    <small>click
-        <span id="click"></span>
-    </small>
-    <div id="currentTotal"></div>
-    <div id="buttons">
-        <div class="button" data-val=".1" data-cost="10">Beginner -
-            <span>10</span>
-        </div>
-        <div class="button" data-val="1" data-cost="100">Internmedite -
-            <span>100</span>
-        </div>
-        <div class="button" data-val="10" data-cost="1000">Advance -
-            <span>1000</span>
-        </div>
-        <div class="button" data-val="100" data-cost="10000">Super advance -
-            <span>10000</span>
-        </div>
+    <div id="space"></div>
+    <div id="cookie" onclick="cookieClick()">
+        <img src="http://3.bp.blogspot.com/-P87VGfPnOFo/Tsf86vgg4jI/AAAAAAAAAfM/1qy0e395Rww/s1600/Who+Took+the+Cookie+-+cookie.png"
+            id="image-cookie" />
     </div>
+    <p>Number of Cookies:</p>
+
+    <div id="numbers"></div>
+    <div id="upgradeLevel"></div>
+
+    <p id="shine">Intructions: Click the cookie - this makes more cookies.</p>
+    <p>You will AUTOMATICALLY upgrade according the following table of upgrade costs! :)</p>
+
+    <table>
+        <tr>
+            <td>Name</td>
+            <td>How many cookies can it make?</td>
+            <td>cost</td>
+        </tr>
+
+        <tr>
+            <td>Regular cookie eater!</td>
+            <td>Regular cookie eater! make 2x's as much!</td>
+            <td>30 cookies!</td>
+        </tr>
+
+        <tr>
+            <td>Cookie Lover</td>
+            <td>Cookie Lover makes 10x's as much!</td>
+            <td>500 cookies!</td>
+        </tr>
+
+        <tr>
+            <td>Crazy cookie eater!</td>
+            <td> Crazy cookie eater makes 30x's as much!</td>
+            <td>1000 cookies!</td>
+        </tr>
+
+        <tr>
+            <td>Born to eat cookies!</td>
+            <td>Born to eat cookies makes 1000x's as much!</td>
+            <td>100000 cookies!</td>
+        </tr>
+
+    </table>
     <script type="text/javascript" src="./script.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 </body>
 
 </html>
