Update airplane project

--- a/03week/airplane/index.html
+++ b/03week/airplane/index.html
@@ -46,15 +46,35 @@
         </section>
         <section class="sect2">
                 <article class="location_box">
-                    <div class="depart_box">Depart</div>
-                    <div class="arrive_box">Arrive</div>
+                    <input type="text" class="depart_box" placeholder="Depart">
+                    <input type="text" class="arrive_box" placeholder="Arrive">
                 </article>
         </section>        
         <section class="sect3">
                 <article class="time_box">
-                        <div class="startdate_box">mm/dd/yyyy</div>
-                        <div class="enddate_box">mm/dd/yyyy</div>
+                        <input type="date" class="startdate_box" placeholder="mm/dd/yyyy">
+                        <input type="date" class="enddate_box" placeholder="mm/dd/yyyy">
                 </article>
+        </section>
+        <section class="sect4">
+                <article class="passengers_sect">
+                    <div class="passengers">Passengers</div>
+                    <div class="number_box">
+                        <div class="number_1">1</div>
+                        <div class="down">&#9661</div>
+                    </div>
+                    <div class="radio_btn">
+                        <input type="radio" name="return" value="return">
+                        Return
+                        <input type="radio" name="one" value="one-way">
+                        One Way
+                    </div>
+                </article>
+        </section>
+        <section class="sect5">
+            <article class="search_btn">
+                <div class="search_text">Search Flights</div>
+            </article>
         </section>
 
     </main>
