corrected tile again

--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -404,7 +404,7 @@
           </div>
 		      <div class="plankCreate outterItemCreate">
             <div id = "plankRequiredMaterials"class="requiredMaterials"></div>
-            <div id = "plankMiner" class="itemMiner plank" data-origin = "Plank" ></div>
+            <div id = "plankMiner" class="itemMiner plank" data-origin = "plank" ></div>
             <div id="plankMakeAmmount"></div>
           </div>
 		      <div class="ropeLadderCreate outterItemCreate">
